Prevent nav shift on modal open

--- a/client/src/style/style.less
+++ b/client/src/style/style.less
@@ -51,6 +51,10 @@ body {
   overflow-y: scroll;
 }
 
+body.modal-open nav.navbar-fixed-top {
+  margin-left: -15px;
+}
+
 td.sequence-cell {
     padding: 0 !important;
     font-family: "Roboto mono", monospace;
